# yantrikdb-server

./: .gitattributes  .gitignore  CONCURRENCY.md  Cargo.toml  DESIGN.md  MCP_REDESIGN.md  README.md  SERVER_README.md  deny.toml  pyproject.toml
.github/workflows/: audit.yml  ci.yml  docker.yml  publish-crates.yml  pypi.yml  release.yml
crates/aidb-core/: Cargo.toml
crates/aidb-core/benches/: engine_bench.rs
crates/aidb-core/examples/: profile_recall.rs
crates/aidb-core/src/: bench_utils.rs  conflict.rs  consolidate.rs  engine.rs  graph.rs  graph_index.rs  hnsw.rs  lib.rs  patterns.rs  replication.rs  schema.rs  scoring.rs  sync.rs  triggers.rs  types.rs
crates/aidb-core/src/base/: bench_utils.rs  compression.rs  error.rs  hlc.rs  mod.rs  schema.rs  scoring.rs  serde_helpers.rs  types.rs
crates/aidb-core/src/cognition/: consolidate.rs  mod.rs  patterns.rs  triggers.rs
crates/aidb-core/src/distributed/: conflict.rs  mod.rs  replication.rs  sync.rs
crates/aidb-core/src/engine/: cache.rs  cognition.rs  conflict.rs  graph_ops.rs  indices.rs  lifecycle.rs  mod.rs  recall.rs  record.rs  stats.rs  storage.rs  tests.rs
crates/aidb-core/src/knowledge/: graph.rs  graph_index.rs  mod.rs
crates/aidb-core/src/vector/: hnsw.rs
crates/aidb-python/: Cargo.toml
crates/aidb-python/src/: py_consolidate.rs  py_engine.rs  py_types.rs
crates/aidb-python/src/py_engine/: cognition.rs  graph.rs  memory.rs  mod.rs  sync.rs
crates/yantrikdb-core/: Cargo.toml
crates/yantrikdb-core/src/: id.rs  lib.rs  time.rs
crates/yantrikdb-core/src/base/: error.rs  hlc.rs  schema.rs  types.rs  vault.rs
crates/yantrikdb-core/src/cognition/: benchmark.rs  consolidate.rs  patterns.rs  personality.rs  state.rs  triggers.rs
crates/yantrikdb-core/src/distributed/: conflict.rs  replication.rs  sync.rs
crates/yantrikdb-core/src/engine/: agenda.rs  analogy_engine.rs  belief_network_engine.rs  cache.rs  calibration.rs  causal.rs  cognition.rs  coherence.rs  conflict.rs  counterfactual_engine.rs  experimenter.rs  extractor.rs  feedback.rs  flywheel.rs  graph_ops.rs  graph_state.rs  hawkes.rs  indices.rs  learning.rs  lifecycle.rs  metacognition.rs  mod.rs  narrative_engine.rs  observer.rs  personality_bias.rs  perspective_engine.rs  planner.rs  procedural.rs  recall.rs  receptivity.rs  record.rs  replay_engine.rs  schema_induction_engine.rs  session.rs  skills.rs  stats.rs  storage.rs  surfacing.rs  temporal_helpers.rs  tests.rs  (+2 more)
crates/yantrikdb-core/src/knowledge/: graph.rs  graph_index.rs
crates/yantrikdb-ml/: Cargo.toml
crates/yantrikdb-ml/src/stt/: candle_whisper.rs
crates/yantrikdb-protocol/: Cargo.toml  README.md
crates/yantrikdb-protocol/fuzz/: Cargo.toml
crates/yantrikdb-protocol/fuzz/fuzz_targets/: fuzz_messagepack_deser.rs  fuzz_unpack_frame.rs
crates/yantrikdb-protocol/src/: codec.rs  error.rs  frame.rs  lib.rs  messages.rs  opcodes.rs
crates/yantrikdb-python/: Cargo.toml  pyproject.toml
crates/yantrikdb-python/src/: lib.rs  py_consolidate.rs  py_tenant.rs  py_types.rs
crates/yantrikdb-python/src/py_engine/: cognition.rs  graph.rs  memory.rs  mod.rs  session_temporal.rs  sync.rs
crates/yantrikdb-server/: Cargo.toml  README.md
crates/yantrikdb-server/src/: auth.rs  background.rs  command.rs  config.rs  control.rs  embedder.rs  handler.rs  http_gateway.rs  main.rs  metrics.rs  server.rs  tenant_pool.rs  tls.rs
crates/yantrikdb-server/src/cluster/: mod.rs  peers.rs  replication.rs  server.rs  state.rs  sync_loop.rs
crates/yantrikdb-server/tests/: compat_test.rs  crash_recovery_test.rs  crdt_convergence_test.rs  http_integration.rs
crates/yantrikdb-wasm/: Cargo.toml
crates/yantrikdb-wasm/pkg/: yantrikdb_wasm.d.ts  yantrikdb_wasm.js  yantrikdb_wasm_bg.wasm  yantrikdb_wasm_bg.wasm.d.ts
crates/yantrikdb-wasm/src/: lib.rs
crates/yantrikdb-witness/: Cargo.toml  README.md
crates/yql/: Cargo.toml  README.md
crates/yql/src/: client.rs  commands.rs  format.rs  main.rs  repl.rs
deploy/: docker-compose.cluster.yml  voter1.toml  voter2.toml
docker/: Dockerfile.witness  Dockerfile.yantrikdb  Dockerfile.yql  docker-compose.yml
docs/phase2/: analyze.py  gold_state_ablation.py  gold_state_results.json  harness.py  results.json
docs/rfcs/: 006-context-aware-conflict-detection.md  rfc_008_http_surface.md
docs/showcase/: journalism_engine.py  legal_discovery_engine.py  multi_agent_ops_engine.py  rashomon_engine.md  rashomon_engine.py  volkswagen_engine.py  watergate_engine.py  wirecard_engine.py
ops/runbooks/: cluster-down.md  disk-full.md  hang-captured.md  no-leader.md  oplog-lag.md
sdk/python/: pyproject.toml
sdk/python/yantrikdb/: __init__.py  client.py  types.py
src/aidb/adapters/: __init__.py  crewai.py  langchain.py  openai_agents.py
src/aidb/eval/: harness.py  synthetic.py
src/aidb/mcp/: tools.py
src/aidb/sync/: __init__.py  transport.py
tests/: test_adapters.py  test_engine.py  test_eval.py  test_sync.py
tests/chaos/: README.md  docker-compose.chaos.yml  rolling_upgrade.py  run_chaos.py
tests/fixtures/: README.md
