[project]
name = "aidb"
version = "0.1.0"
description = "A Cognitive Memory Engine for Persistent AI Systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pranab Sarkar", email = "developer@pranab.co.in" },
]
dependencies = [
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "uuid-utils>=0.9.0",
    "mcp[cli]>=1.2.0",
    "click>=8.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
]
sync = [
    "websockets>=12.0",
]
langchain = [
    "langchain-core>=0.2.0",
]
openai = [
    "openai>=1.0.0",
]
crewai = [
    "crewai>=0.40.0",
]

[project.scripts]
aidb = "aidb.cli:main"
aidb-mcp = "aidb.mcp:main"
aidb-server = "aidb.api:main"
aidb-sync = "aidb.sync.transport:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
