[package]
name = "aidb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
uuid7 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
blake3 = "1"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "engine_bench"
harness = false
