[package]
name = "aidb-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "_aidb_rust"
crate-type = ["cdylib"]

[dependencies]
aidb-core = { path = "../aidb-core" }
pyo3 = { version = "0.23", features = ["extension-module", "multiple-pymethods"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
