[package]
name = "yantrikdb"
version = "0.4.3"
edition = "2021"
license = "AGPL-3.0-only"
description = "Cognitive memory engine for persistent AI systems"
readme = "../../README.md"
repository = "https://github.com/yantrikos/yantrikdb"
keywords = ["ai", "memory", "cognitive", "database", "embeddings"]
categories = ["database", "science"]

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
uuid7 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
blake3 = "1"
hex = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
zstd = "0.13"
tracing = "0.1"
aes-gcm = "0.10"
base64 = "0.22"
# parking_lot provides faster, smaller, non-poisoning Mutex/RwLock with
# optional runtime deadlock detection. Used to protect the engine's internal
# state (conn, hlc, vec_index, graph_index, scoring_cache, active_sessions).
# See CONCURRENCY.md for the lock ordering invariant this enforces.
parking_lot = { version = "0.12", features = ["deadlock_detection"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[features]
default = []
profiling = []

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "engine_bench"
harness = false

[[example]]
name = "profile_recall"
required-features = ["profiling"]
