[package]
name = "yantrikdb-ml"
version = "0.1.0"
edition = "2021"
description = "Pluggable ML inference for YantrikDB (candle, llama.cpp, API)"

[dependencies]
yantrikdb-core = { path = "../yantrikdb-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
rand = "0.8"
tts = "0.26"

# Candle backends (optional)
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", optional = true }
hf-hub = { version = "0.5", optional = true }

# API backend (optional)
ureq = { version = "3", features = ["json"], optional = true }

# llama.cpp backend (optional)
llama-cpp-2 = { version = "0.1", optional = true }

[features]
default = ["candle-llm", "candle-stt"]

# Candle-based backends
candle-llm = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
candle-stt = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]

# Hardware acceleration for candle
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]

# API backend
api-llm = ["dep:ureq"]

# llama.cpp backend
llamacpp = ["dep:llama-cpp-2"]
vulkan = ["llama-cpp-2/vulkan"]

[dev-dependencies]
tempfile = "3"
