[package]
name = "yantrikdb-protocol"
version = "0.1.0"
edition = "2021"
description = "Wire protocol codec for YantrikDB — frames, opcodes, messages"
license = "AGPL-3.0"

[dependencies]
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
serde_json = "1"
thiserror = "2"
zstd = "0.13"
