[package]
name = "yantrikdb-protocol"
version = "0.1.0"
edition = "2021"
description = "Wire protocol codec for YantrikDB — binary frames, opcodes, MessagePack messages, Tokio codec"
license = "AGPL-3.0-only"
repository = "https://github.com/yantrikos/yantrikdb-server"
homepage = "https://github.com/yantrikos/yantrikdb-server"
documentation = "https://docs.rs/yantrikdb-protocol"
readme = "README.md"
keywords = ["yantrikdb", "wire-protocol", "messagepack", "codec", "tokio"]
categories = ["network-programming", "encoding"]
authors = ["Pranab Sarkar <developer@pranab.co.in>"]

[dependencies]
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
serde_json = "1"
thiserror = "2"
zstd = "0.13"
