[package]
name = "yantrikdb-python"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Python bindings for YantrikDB cognitive memory engine"
repository = "https://github.com/yantrikos/yantrikdb"

[lib]
name = "_yantrikdb_rust"
crate-type = ["cdylib"]

[dependencies]
yantrikdb-core = { path = "../yantrikdb-core", package = "yantrikdb" }
pyo3 = { version = "0.23", features = ["extension-module", "multiple-pymethods"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"

[features]
default = []
