[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "yantrikdb"
version = "0.2.9"
description = "A Cognitive Memory Engine for Persistent AI Systems"
readme = "../../README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Pranab Sarkar", email = "developer@pranab.co.in" },
]
keywords = ["ai", "memory", "cognitive", "database", "embeddings", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "uuid-utils>=0.9.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0"]
sync = ["websockets>=12.0"]
langchain = ["langchain-core>=0.2.0"]
openai = ["openai>=1.0.0"]
crewai = ["crewai>=0.40.0"]
agent = ["httpx>=0.27.0", "pyyaml>=6.0"]
all = [
    "yantrikdb[server,sync,langchain,openai,agent]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
]

[project.scripts]
yantrikdb = "yantrikdb.cli:main"
yantrikdb-server = "yantrikdb.api:main"
yantrikdb-sync = "yantrikdb.sync.transport:main"

[project.urls]
Homepage = "https://github.com/yantrikos/yantrikdb"
Repository = "https://github.com/yantrikos/yantrikdb"
Issues = "https://github.com/yantrikos/yantrikdb/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "yantrikdb._yantrikdb_rust"
python-source = "../../src"
python-packages = ["yantrikdb"]
