[package]
name = "yantrikdb-server"
version = "0.5.2"
edition = "2021"
description = "YantrikDB database server — multi-tenant cognitive memory with wire protocol, HTTP gateway, replication, auto-failover, and at-rest encryption"
license = "AGPL-3.0-only"
repository = "https://github.com/yantrikos/yantrikdb-server"
homepage = "https://github.com/yantrikos/yantrikdb-server"
documentation = "https://docs.rs/yantrikdb-server"
readme = "README.md"
keywords = ["database", "memory", "ai", "replication", "raft"]
categories = ["database", "database-implementations"]
authors = ["Pranab Sarkar <developer@pranab.co.in>"]

[[bin]]
name = "yantrikdb"
path = "src/main.rs"

[dependencies]
yantrikdb = { version = "0.4.2", path = "../yantrikdb-core" }
yantrikdb-protocol = { version = "0.1.0", path = "../yantrikdb-protocol" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
futures = "0.3"

# HTTP gateway
axum = { version = "0.8", features = ["json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Data
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
sha2 = "0.10"
hex = "0.4"
rand = { version = "0.8", features = ["small_rng"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

# Embeddings
fastembed = { version = "5", default-features = false, features = ["ort-load-dynamic", "hf-hub-native-tls"] }

# Misc
anyhow = "1"
thiserror = "2"
uuid7 = "1"
bytes = "1"

# For `cluster status` CLI command
reqwest = { version = "0.12", features = ["json", "blocking"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio-test = "0.4"
