[package]
name = "yantrikdb-server"
version = "0.6.1"
edition = "2021"
description = "YantrikDB database server — multi-tenant cognitive memory with wire protocol, HTTP gateway, replication, auto-failover, and at-rest encryption"
license = "AGPL-3.0-only"
repository = "https://github.com/yantrikos/yantrikdb-server"
homepage = "https://github.com/yantrikos/yantrikdb-server"
documentation = "https://docs.rs/yantrikdb-server"
readme = "README.md"
keywords = ["database", "memory", "ai", "replication", "raft"]
categories = ["database", "database-implementations"]
authors = ["Pranab Sarkar <developer@pranab.co.in>"]

[[bin]]
name = "yantrikdb"
path = "src/main.rs"

[dependencies]
yantrikdb = { version = "0.5.1", git = "https://github.com/yantrikos/yantrikdb.git" }
yantrikdb-protocol = { version = "0.1.0", path = "../yantrikdb-protocol" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
futures = "0.3"

# Lock primitives
# parking_lot provides non-poisoning Mutex/RwLock with runtime deadlock
# detection via the `deadlock_detection` feature. A background task in
# main.rs runs `deadlock::check_deadlock()` on a 10s cadence and logs any
# cycles with full backtraces. See CONCURRENCY.md for lock ordering rules.
parking_lot = { version = "0.12", features = ["deadlock_detection"] }

# HTTP gateway
axum = { version = "0.8", features = ["json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Data
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
sha2 = "0.10"
hex = "0.4"
rand = { version = "0.8", features = ["small_rng"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics — lightweight Prometheus-compatible histograms and counters.
# metrics is the facade; metrics-process gives us process-level gauges
# (RSS, FDs, CPU). We render to Prometheus text format in /metrics by hand
# rather than using a full exporter, keeping the dep tree small.
metrics = "0.24"

# Config
toml = "0.8"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

# Embeddings
fastembed = { version = "5", default-features = false, features = ["ort-load-dynamic", "hf-hub-native-tls"] }

# Optional: tokio-console for live runtime inspection.
# Build with: cargo build --features tokio-console
# Then attach: tokio-console http://127.0.0.1:6669
console-subscriber = { version = "0.4", optional = true }

# Misc
anyhow = "1"
blake3 = "1"
thiserror = "2"
uuid7 = "1"
bytes = "1"

# For `cluster status` CLI command
reqwest = { version = "0.12", features = ["json", "blocking"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio-test = "0.4"

[features]
default = []
# Enable tokio-console subscriber for live task/resource inspection.
# Build with: cargo build --features tokio-console
# Then attach: tokio-console http://127.0.0.1:6669
# Adds ~5% overhead — use for debugging, not production.
tokio-console = ["dep:console-subscriber"]
