[project]
name = "yantrikdb-client"
version = "0.1.0"
description = "Python client SDK for YantrikDB — the cognitive memory database"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
